# py_simple_openid_connect

./: .envrc  .envrc.dist  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  flake.nix  pyproject.toml  requirements.dev.txt
.git-crypt/keys/default/0/: E28C78646FA4F70B30422385A78A03C25A3A3825.gpg
.github/workflows/: check_pre_commit.yml  checks.yml  test.yml
dev/: compose.yaml
dev/keycloak_exports/: realm.json
docs/: Makefile  api.rst  conf.py  django-integration.rst  drf-integration.rst  index.rst  installation.rst  nonce_and_state.rst  resource-server-usage.rst  usage.rst
src/: manage.py
src/simple_openid/: __init__.py  base_data.py  client.py  client_authentication.py  data.py  discovery.py  exceptions.py  jwk.py  rp_initiated_logout.py  token_introspection.py  token_refresh.py  userinfo.py
src/simple_openid/flows/: __init__.py  implicit_flow.py
src/simple_openid/flows/authorization_code_flow/: __init__.py  client.py  data.py
src/simple_openid_connect/: __init__.py  base_data.py  client.py  client_authentication.py  data.py  discovery.py  exceptions.py  jwk.py  pkce.py  rp_initiated_logout.py  token_introspection.py  token_refresh.py  userinfo.py  utils.py
src/simple_openid_connect/flows/: __init__.py
src/simple_openid_connect/flows/authorization_code_flow/: __init__.py  client.py
src/simple_openid_connect/flows/client_credentials_grant/: __init__.py  client.py
src/simple_openid_connect/flows/direct_access_grant/: __init__.py  client.py
src/simple_openid_connect/integrations/: __init__.py
src/simple_openid_connect/integrations/django/: __init__.py  admin.py  apps.py  decorators.py  middleware.py  models.py  settings.py  urls.py  user_mapping.py  views.py  wsgi.py
src/simple_openid_connect/integrations/django/management/commands/: clear-expired-openid-sessions.py
src/simple_openid_connect/integrations/django/migrations/: 0001_initial.py  0002_move_sessions_id_token.py  0003_openidsession_add_raw_id_token.py
src/simple_openid_connect/integrations/django/static/simple_openid_connect/: login_failed.css
src/simple_openid_connect/integrations/django/templates/simple_openid_connect/: login_failed.html
src/simple_openid_connect/integrations/django/templates/simple_openid_connect/admin/: openid_session_inline.html
src/simple_openid_connect/integrations/djangorestframework/: __init__.py  authentication.py  drf_spectacular_schema.py  permissions.py
src/simple_openid_connect/scripts/: show_openid_tokens.py
src/simple_openid_connect_django/: __init__.py  apps.py  decorators.py  models.py  settings.py  urls.py  user_mapping.py  views.py  wsgi.py
src/simple_openid_connect_django/migrations/: 0001_initial.py
src/simple_openid_connect_django/templates/simple_openid_connect_django/: login_failed.html  login_success.html
tests/: conftest.py  secrets.yml  test_authorization_code_flow.py  test_client.py  test_client_auth.py  test_client_credentials_grant.py  test_direct_access_grant.py  test_discovery.py  test_jwk.py  test_message_encoding.py  test_pkce.py  test_rp_initiated_logout.py  test_validate_extern.py
tests/django_test_project/: manage.py
tests/django_test_project/django_test_project/: settings.py  settings_base.py  settings_dev.py  settings_test.py  urls.py  views.py  wsgi.py
tests/django_test_project/django_test_project/templates/admin/: login.html
tests/django_test_project/django_test_project/tests/: conftest.py  test_access_token_protected_view.py  test_frontchannel_logout_notifications.py  test_login.py  test_logout.py
tests/dummy_provider/: config.yml  main.mjs  package.json  pnpm-lock.yaml
tests/interactive_tests/: conftest.py  secrets.yml  test_google.py  test_mafiasi_identity.py
