[project]
name = "simple_openid_connect"
description = "Simple and opinionated OpenID-Connect relying party and resource server implementation"
authors = [{ name = "Finn-Thorben Sell", email = "dev@finn-thorben.me" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
requires-python = "~=3.9"
dependencies = [
    "cryptojwt~=1.8",
    "furl~=2.1",
    "pydantic~=1.10",
    "requests~=2.28",
]

[project.optional-dependencies]
django = [
    "django~=3.0"
]

[project.urls]
Home = "https://github.com/fsinfuhh/py_simple_openid_connect"
Source = "https://github.com/fsinfuhh/py_simple_openid_connect"
Documentations = "https://simple-openid-connect.readthedocs.io/en/latest/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
    ".git-crypt",
    "tests/interactive_tests/secrets.yml",
    "src/manage.py",
    "src/simple_openid_connect_django/settings.py",
    "src/simple_openid_connect_django/wsgi.py",
    "src/simple_openid_connect_django/asgi.py",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
files = ["src/simple_openid_connect", "src/simple_openid_connect_django"]
strict = true

[[tool.mypy.overrides]]
module = ["cryptojwt.*", "furl"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "simple_openid_connect_django.settings"

[tool.pytest.ini_options]
env = [
    "DJANGO_LIVE_TEST_SERVER_ADDRESS=localhost:8001"
]
pythonpath = "src tests/django_test_project"
markers = [
    # run these tests by passing --run-interactive to pytest
    "interactive: Tests that require user interaction and are only run explicitly",
]
testpaths = "tests tests/django_test_project/django_test_project/tests"
explicit-only = [
    "interactive",
]
log_cli = true
log_cli_level = "info"
django_find_project = false
DJANGO_SETTINGS_MODULE = "django_test_project.settings"
